; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_dialog.c_DIALOG_DlgDirListA.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_dialog.c_DIALOG_DlgDirListA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i32, i32, i32, i32)* @DIALOG_DlgDirListA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DIALOG_DlgDirListA(i32 %0, i64 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  store i32 %0, i32* %8, align 4
  store i64 %1, i64* %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %17 = load i64, i64* %9, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %54

19:                                               ; preds = %6
  %20 = load i32, i32* @CP_ACP, align 4
  %21 = load i64, i64* %9, align 8
  %22 = call i32 @MultiByteToWideChar(i32 %20, i32 0, i64 %21, i32 -1, i32* null, i32 0)
  store i32 %22, i32* %15, align 4
  %23 = call i32 (...) @GetProcessHeap()
  %24 = load i32, i32* %15, align 4
  %25 = sext i32 %24 to i64
  %26 = mul i64 %25, 4
  %27 = trunc i64 %26 to i32
  %28 = call i32* @HeapAlloc(i32 %23, i32 0, i32 %27)
  store i32* %28, i32** %16, align 8
  %29 = load i32*, i32** %16, align 8
  %30 = icmp eq i32* %29, null
  br i1 %30, label %31, label %33

31:                                               ; preds = %19
  %32 = load i32, i32* @FALSE, align 4
  store i32 %32, i32* %7, align 4
  br label %61

33:                                               ; preds = %19
  %34 = load i32, i32* @CP_ACP, align 4
  %35 = load i64, i64* %9, align 8
  %36 = load i32*, i32** %16, align 8
  %37 = load i32, i32* %15, align 4
  %38 = call i32 @MultiByteToWideChar(i32 %34, i32 0, i64 %35, i32 -1, i32* %36, i32 %37)
  %39 = load i32, i32* %8, align 4
  %40 = load i32*, i32** %16, align 8
  %41 = load i32, i32* %10, align 4
  %42 = load i32, i32* %11, align 4
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* %13, align 4
  %45 = call i32 @DIALOG_DlgDirListW(i32 %39, i32* %40, i32 %41, i32 %42, i32 %43, i32 %44)
  store i32 %45, i32* %14, align 4
  %46 = load i32, i32* @CP_ACP, align 4
  %47 = load i32*, i32** %16, align 8
  %48 = load i64, i64* %9, align 8
  %49 = call i32 @WideCharToMultiByte(i32 %46, i32 0, i32* %47, i32 -1, i64 %48, i32 2147483647, i32* null, i32* null)
  %50 = call i32 (...) @GetProcessHeap()
  %51 = load i32*, i32** %16, align 8
  %52 = call i32 @HeapFree(i32 %50, i32 0, i32* %51)
  %53 = load i32, i32* %14, align 4
  store i32 %53, i32* %7, align 4
  br label %61

54:                                               ; preds = %6
  %55 = load i32, i32* %8, align 4
  %56 = load i32, i32* %10, align 4
  %57 = load i32, i32* %11, align 4
  %58 = load i32, i32* %12, align 4
  %59 = load i32, i32* %13, align 4
  %60 = call i32 @DIALOG_DlgDirListW(i32 %55, i32* null, i32 %56, i32 %57, i32 %58, i32 %59)
  store i32 %60, i32* %7, align 4
  br label %61

61:                                               ; preds = %54, %33, %31
  %62 = load i32, i32* %7, align 4
  ret i32 %62
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i64, i32, i32*, i32) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @DIALOG_DlgDirListW(i32, i32*, i32, i32, i32, i32) #1

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32*, i32, i64, i32, i32*, i32*) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
